--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,20 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta name="description" content="HelloApp desc" />
+
+    <meta property="og:site_name" content="HelloApp.xyz" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="HelloApp" />
+    <meta property="og:description" content="HelloApp desc" />
+    <meta property="og:url" content="https://HelloApp.xyz" />
+    <meta property="og:image" content="https://HelloApp.xyz/bg.jpg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="HelloApp" />
+    <meta name="twitter:description" content="HelloApp desc" />
+    <meta name="twitter:url" content="https://HelloApp.xyz" />
+    <meta name="twitter:image" content="https://HelloApp.xyz/bg.jpg" />
+    <meta name="twitter:site" content="@antonybudianto" />
     <meta name="theme-color" content="#000000" />
     <!--
       manifest.json provides metadata used when your web app is added to the
@@ -29,6 +43,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <div id="toastr"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
